@@ -6,28 +6,25 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.example.ai.agent.capability.dto.CapabilitySaveDTO;
-import org.example.ai.agent.capability.dto.CapabilityTestRequestDTO;
 import org.example.ai.agent.capability.entity.BusinessSystem;
 import org.example.ai.agent.capability.entity.CapabilityDefinition;
+import org.example.ai.agent.capability.entity.CapabilityVersion;
 import org.example.ai.agent.capability.entity.FieldDictionary;
 import org.example.ai.agent.capability.index.CapabilityIndexChangedEvent;
+import org.example.ai.agent.capability.invocation.service.CapabilityBindingConfigurationService;
 import org.example.ai.agent.capability.mapper.CapabilityDefinitionMapper;
 import org.example.ai.agent.capability.service.BusinessSystemService;
 import org.example.ai.agent.capability.service.CapabilityDefinitionService;
+import org.example.ai.agent.capability.service.CapabilityVersionService;
 import org.example.ai.agent.capability.service.FieldDictionaryService;
-import org.example.ai.agent.capability.vo.AgentCapabilityVO;
-import org.example.ai.agent.capability.vo.CapabilityDetailVO;
-import org.example.ai.agent.capability.vo.CapabilityPublishResultVO;
-import org.example.ai.agent.capability.vo.CapabilityTestResultVO;
+import org.example.ai.agent.capability.version.CapabilityRuntimeSnapshotResolver;
+import org.example.ai.agent.capability.version.CapabilityVersionSnapshotFactory;
+import org.example.ai.agent.capability.version.model.CapabilitySnapshotMaterial;
+import org.example.ai.agent.capability.version.model.CapabilityVersionPublishResult;
+import org.example.ai.agent.capability.vo.*;
 import org.example.ai.agent.common.exception.BusinessException;
-import org.example.ai.agent.plan.PlanStep;
-import org.example.ai.agent.tool.BusinessCapabilityExecutor;
-import org.example.ai.agent.tool.ToolExecutionContext;
-import org.example.ai.agent.tool.ToolResult;
 import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
-import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -36,7 +33,6 @@ import java.time.LocalDateTime;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -51,20 +47,31 @@ public class CapabilityDefinitionServiceImpl extends ServiceImpl<CapabilityDefin
     private final ObjectMapper objectMapper;
     private final BusinessSystemService businessSystemService;
     private final ApplicationEventPublisher eventPublisher;
+    private final CapabilityVersionSnapshotFactory snapshotFactory;
+    private final CapabilityVersionService capabilityVersionService;
+    private final CapabilityRuntimeSnapshotResolver runtimeSnapshotResolver;
+    /**
+     * 能力请求和响应绑定配置服务。
+     */
+    private final CapabilityBindingConfigurationService bindingConfigurationService;
+
+
     /**
      * 根据能力编码查询启用状态的能力。
      */
     @Override
     public CapabilityDefinition getEnabledByCode(String capabilityCode) {
-        return lambdaQuery()
-                .eq(CapabilityDefinition::getCapabilityCode, capabilityCode)
-                .eq(CapabilityDefinition::getEnabled, 1)
-                // 兼容旧数据，同时禁止草稿能力被 Agent 调用。
-                .and(wrapper -> wrapper
-                        .eq(CapabilityDefinition::getPublishStatus,"PUBLISHED")
-                        .or()
-                        .isNull(CapabilityDefinition::getPublishStatus ))
-                .one();
+        CapabilityDefinition registry =lambdaQuery().eq(CapabilityDefinition::getCapabilityCode,
+                                capabilityCode)
+                        .eq(CapabilityDefinition::getEnabled, 1)
+                        .eq(CapabilityDefinition::getPublishStatus,
+                                "PUBLISHED")
+                        .isNotNull(CapabilityDefinition::getActiveVersionId)
+                        .one();
+        /*
+         * 返回发布快照，而不是主表中的最新草稿。
+         */
+        return runtimeSnapshotResolver.resolve(registry);
     }
 
     @Override
@@ -75,64 +82,179 @@ public class CapabilityDefinitionServiceImpl extends ServiceImpl<CapabilityDefin
     @Override
     @Transactional(rollbackFor = Exception.class)
     public Boolean saveCapability(CapabilitySaveDTO dto) {
-//        checkRequired(dto);
-        // 标准化副作用级别，未填写时默认为只读能力
-        String sideEffect = StringUtils.hasText(dto.getSideEffect())
-                ? dto.getSideEffect().trim().toUpperCase()
-                : "READ";
-        if (!List.of("READ", "WRITE", "DANGEROUS").contains(sideEffect)) {
-            throw new BusinessException(400, "sideEffect 只允许配置 READ、WRITE 或 DANGEROUS");
+        checkSaveRequired(dto);
+
+        CapabilityDefinition existing = null;
+
+        /*
+         * 修改能力时先读取旧记录：
+         * 1. 检查记录是否存在；
+         * 2. 计算下一个配置修订号。
+         */
+        if (dto.getId() != null) {
+            existing = baseMapper.selectByIdForUpdate(dto.getId());
+
+            if (existing == null) {
+                throw new BusinessException(
+                        404,
+                        "能力不存在：" + dto.getId()
+                );
+            }
+            /*
+             * capabilityCode 是 GraphSpec 和版本记录的稳定引用，
+             * 创建后禁止修改。
+             */
+            if (!existing.getCapabilityCode().equals(dto.getCapabilityCode().trim())) {
+                throw new BusinessException( 400, "能力编码创建后不能修改" );
+            }
         }
+
+        String sideEffect =
+                StringUtils.hasText(dto.getSideEffect())
+                        ? dto.getSideEffect()
+                        .trim()
+                        .toUpperCase()
+                        : "READ";
+
+        if (!List.of(
+                "READ",
+                "WRITE",
+                "DANGEROUS"
+        ).contains(sideEffect)) {
+            throw new BusinessException(
+                    400,
+                    "sideEffect只允许配置READ、WRITE或DANGEROUS"
+            );
+        }
+
         dto.setSideEffect(sideEffect);
+
+        /*
+         * READ 自动执行；
+         * WRITE 必须确认；
+         * DANGEROUS 即使保存成功也禁止发布。
+         */
         if ("READ".equals(sideEffect)) {
             dto.setRequireConfirm(Boolean.FALSE);
-        }
-        // 写操作默认必须经过用户确认
-        if ("WRITE".equals(sideEffect)) {
+        } else {
             dto.setRequireConfirm(Boolean.TRUE);
         }
-        // 危险能力即使配置成功，后续执行器也必须拒绝执行
-        if ("DANGEROUS".equals(sideEffect)) {
-            dto.setRequireConfirm(Boolean.TRUE);
+
+        dto.setMethod(
+                dto.getMethod().trim().toUpperCase()
+        );
+
+        dto.setUrl(dto.getUrl().trim());
+
+        dto.setInputSchemaJson(
+                cleanToSingleLine(dto.getInputSchemaJson())
+        );
+
+        dto.setOutputSchemaJson(
+                cleanToSingleLine(dto.getOutputSchemaJson())
+        );
+
+        if (!StringUtils.hasText(
+                dto.getRequestContentType()
+        )) {
+            dto.setRequestContentType(
+                    "application/json"
+            );
         }
-        dto.setOutputSchemaJson(cleanToSingleLine(dto.getOutputSchemaJson()));
-        dto.setInputSchemaJson(cleanToSingleLine(dto.getInputSchemaJson()));
+
+        if (dto.getTimeoutMs() == null) {
+            dto.setTimeoutMs(5000);
+        }
+
+        if (dto.getTimeoutMs() < 100
+                || dto.getTimeoutMs() > 60000) {
+            throw new BusinessException(
+                    400,
+                    "timeoutMs必须在100到60000毫秒之间"
+            );
+        }
+
+        /*
+         * 草稿阶段请求绑定可以为空；
+         * 只要填写了，就必须立即通过校验。
+         */
+        dto.setRequestBindingJson(
+                bindingConfigurationService
+                        .normalizeRequestBinding(
+                                dto.getMethod(),
+                                dto.getUrl(),
+                                dto.getRequestBindingJson()
+                        )
+        );
+
+        dto.setResponseBindingJson(bindingConfigurationService.normalizeResponseBinding( dto.getResponseBindingJson()));
+
         CapabilityDefinition entity = new CapabilityDefinition();
+
         BeanUtils.copyProperties(dto, entity);
+
         entity.setUpdatedAt(LocalDateTime.now());
-        // 默认启用，默认只读。
-        if (entity.getEnabled() == null) {
-            entity.setEnabled(1);
+
+        if (StringUtils.hasText(entity.getSystemCode())) {
+            entity.setSystemCode(
+                    entity.getSystemCode()
+                            .trim()
+                            .toUpperCase()
+            );
         }
-        // 手工创建的能力默认标记为 MANUAL。
+
         if (!StringUtils.hasText(entity.getSourceType())) {
             entity.setSourceType("MANUAL");
         } else {
-            entity.setSourceType(entity.getSourceType().trim().toUpperCase());
+            entity.setSourceType(
+                    entity.getSourceType()
+                            .trim()
+                            .toUpperCase()
+            );
         }
-        // 现有手工能力默认直接发布。
-        // 后续通过 OpenAPI 导入的能力会明确设置为 DRAFT。
-        if (!StringUtils.hasText(entity.getPublishStatus())) {
-            entity.setPublishStatus("PUBLISHED");
+
+        /*
+         * 新增能力版本从1开始；
+         * 已有能力每次保存配置时修订号加1。
+         */
+        int previousRevision = existing == null || existing.getConfigRevision() == null
+                        ? 0 : existing.getConfigRevision();
+
+        entity.setConfigRevision(previousRevision + 1);
+        entity.setDraftDirty(1);
+
+        if (existing == null || existing.getActiveVersionId() == null) {
+
+            /*
+             * 尚未发布过的能力。
+             */
+            entity.setActiveVersionId(null);
+            entity.setPublishStatus("DRAFT");
+            entity.setEnabled(0);
+            entity.setConfigChecksum(null);
+            entity.setValidatedAt(null);
         } else {
-            entity.setPublishStatus(entity.getPublishStatus().trim().toUpperCase());
+            /*
+             * 已经发布过的能力继续保留原运行版本。
+             *
+             * 当前保存的只是新草稿，不得影响：
+             * activeVersionId、enabled、configChecksum、validatedAt。
+             */
+            entity.setActiveVersionId(
+                    existing.getActiveVersionId()
+            );
+            entity.setEnabled(existing.getEnabled());
+            entity.setConfigChecksum(
+                    existing.getConfigChecksum()
+            );
+            entity.setValidatedAt(
+                    existing.getValidatedAt()
+            );
+            entity.setPublishStatus( "DISABLED".equals(existing.getPublishStatus())
+                            ? "DISABLED"
+                            : "PUBLISHED");
         }
-
-        if (!List.of("DRAFT","PUBLISHED","DISABLED").contains(entity.getPublishStatus())) {
-            throw new BusinessException(400,"publishStatus 只允许为 DRAFT、PUBLISHED 或 DISABLED");
-        }
-        if (StringUtils.hasText(entity.getSystemCode())) {
-            entity.setSystemCode(entity.getSystemCode().trim().toUpperCase());
-        }
-        boolean saved = saveOrUpdate(entity);
-        if (saved) {
-            CapabilityDefinition persisted =getById(entity.getId());
-
-            if (persisted != null) {
-                eventPublisher.publishEvent(new CapabilityIndexChangedEvent(persisted.getCapabilityCode()));
-            }
-        }
-        return saved;
+        return saveOrUpdate(entity);
     }
 
     @Override
@@ -178,29 +300,20 @@ public class CapabilityDefinitionServiceImpl extends ServiceImpl<CapabilityDefin
 
     @Override
     public List<AgentCapabilityVO> listEnabledForAgent() {
-        return lambdaQuery()
-                .eq(CapabilityDefinition::getEnabled, 1)
-                .and(wrapper -> wrapper
-                        .eq(CapabilityDefinition::getPublishStatus,"PUBLISHED")
-                        .or()
-                        .isNull(CapabilityDefinition::getPublishStatus))
-                .orderByAsc(CapabilityDefinition::getDomain)
-                .orderByAsc(CapabilityDefinition::getCapabilityCode)
-                .list()
+        return listAgentCallableCapabilities()
                 .stream()
                 .map(item -> {
-                    AgentCapabilityVO vo = new AgentCapabilityVO();
+                    AgentCapabilityVO vo =new AgentCapabilityVO();
                     vo.setCapabilityCode(item.getCapabilityCode());
                     vo.setCapabilityName(item.getCapabilityName());
                     vo.setDomain(item.getDomain());
                     vo.setModuleName(item.getModuleName());
                     vo.setDescription(item.getDescription());
-                    vo.setInputSchemaJson(item.getInputSchemaJson());
+                    vo.setInputSchemaJson( item.getInputSchemaJson());
                     vo.setSideEffect(item.getSideEffect());
                     vo.setRequireConfirm(item.getRequireConfirm());
                     return vo;
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 
     @Override
@@ -229,66 +342,225 @@ public class CapabilityDefinitionServiceImpl extends ServiceImpl<CapabilityDefin
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public CapabilityPublishResultVO publishCapabilities(List<String> capabilityCodes) {
-        List<String> uniqueCodes = capabilityCodes.stream().filter(StringUtils::hasText).map(String::trim)
-                .distinct().toList();
+    public CapabilityPublishResultVO publishCapabilities(List<String> capabilityCodes,String publishedBy) {
+        if (capabilityCodes == null) {
+            throw new BusinessException(
+                    400,
+                    "能力编码列表不能为空"
+            );
+        }
+
+        List<String> uniqueCodes = capabilityCodes.stream()
+                .filter(StringUtils::hasText)
+                .map(String::trim)
+                .distinct()
+                .sorted()
+                .toList();
+
         if (uniqueCodes.isEmpty()) {
-            throw new BusinessException( 400,"能力编码列表不能为空");
+            throw new BusinessException(
+                    400,
+                    "能力编码列表不能为空"
+            );
         }
+
         if (uniqueCodes.size() > 100) {
-            throw new BusinessException( 400,"一次最多发布100个能力");
+            throw new BusinessException(
+                    400,
+                    "一次最多发布100个能力"
+            );
         }
+
+        /*
+         * 锁定所有待发布能力，防止两个发布请求生成相同版本号。
+         */
+        List<CapabilityDefinition> locked =
+                baseMapper.selectByCodesForUpdate(uniqueCodes);
+
+        Map<String, CapabilityDefinition> capabilityMap =
+                locked.stream().collect(
+                        Collectors.toMap(
+                                CapabilityDefinition::getCapabilityCode,
+                                item -> item
+                        )
+                );
+
+        List<String> missingCodes = uniqueCodes.stream()
+                .filter(code -> !capabilityMap.containsKey(code))
+                .toList();
+
+        if (!missingCodes.isEmpty()) {
+            throw new BusinessException(
+                    404,
+                    "以下能力不存在：" + missingCodes
+            );
+        }
+
         List<CapabilityDefinition> capabilities =
-                lambdaQuery()
-                        .in(CapabilityDefinition::getCapabilityCode,uniqueCodes)
-                        .list();
-        if (capabilities.size() != uniqueCodes.size()) {
-            Set<String> existingCodes = capabilities.stream()
-                    .map(CapabilityDefinition::getCapabilityCode)
-                    .collect(Collectors.toSet());
-            List<String> missingCodes = uniqueCodes.stream()
-                    .filter(code ->!existingCodes.contains(code))
-                    .toList();
+                uniqueCodes.stream()
+                        .map(capabilityMap::get)
+                        .toList();
 
-            throw new BusinessException(404,"以下能力不存在：" + missingCodes);
-        }
+        /*
+         * 第一遍只校验和生成快照。
+         * 任意一个能力失败时，不允许写入任何版本。
+         */
+        Map<String, CapabilitySnapshotMaterial> materials =
+                new LinkedHashMap<>();
 
-        // 先校验全部能力，再执行更新。
         for (CapabilityDefinition capability : capabilities) {
             validateBeforePublish(capability);
+
+            materials.put(
+                    capability.getCapabilityCode(),
+                    snapshotFactory.create(capability)
+            );
         }
+
         LocalDateTime now = LocalDateTime.now();
-        capabilities.forEach(capability -> {
+
+        List<CapabilityPublishedVersionVO> versionViews =
+                new java.util.ArrayList<>();
+
+        int createdVersionCount = 0;
+        int reusedVersionCount = 0;
+
+        /*
+         * 第二遍才执行版本写入。
+         */
+        for (CapabilityDefinition capability : capabilities) {
+            CapabilitySnapshotMaterial material =
+                    materials.get(
+                            capability.getCapabilityCode()
+                    );
+
+            CapabilityVersionPublishResult result =
+                    capabilityVersionService.publishSnapshot(
+                            capability,
+                            material,
+                            publishedBy
+                    );
+
+            CapabilityVersion version = result.version();
+
+            if (result.reused()) {
+                reusedVersionCount++;
+            } else {
+                createdVersionCount++;
+            }
+
+            capability.setActiveVersionId(version.getId());
+            capability.setConfigChecksum(
+                    version.getConfigChecksum()
+            );
+            capability.setValidatedAt(now);
+            capability.setDraftDirty(0);
             capability.setPublishStatus("PUBLISHED");
             capability.setEnabled(1);
             capability.setUpdatedAt(now);
-        });
+
+            versionViews.add(
+                    CapabilityPublishedVersionVO.builder()
+                            .capabilityCode(
+                                    capability.getCapabilityCode()
+                            )
+                            .versionId(version.getId())
+                            .versionNo(version.getVersionNo())
+                            .configRevision(
+                                    version.getConfigRevision()
+                            )
+                            .configChecksum(
+                                    version.getConfigChecksum()
+                            )
+                            .reused(result.reused())
+                            .build()
+            );
+        }
+
         updateBatchById(capabilities);
-        capabilities.forEach(capability ->
-                eventPublisher.publishEvent(new CapabilityIndexChangedEvent(capability.getCapabilityCode())
-                )
-        );
+
+        /*
+         * 只有正式发布后才刷新 Agent 能力索引。
+         */
+        capabilities.forEach(capability ->eventPublisher.publishEvent(
+                        new CapabilityIndexChangedEvent(capability.getCapabilityCode() )));
 
         return CapabilityPublishResultVO.builder()
                 .submittedCount(uniqueCodes.size())
                 .publishedCount(capabilities.size())
+                .createdVersionCount(createdVersionCount)
+                .reusedVersionCount(reusedVersionCount)
                 .capabilityCodes(uniqueCodes)
+                .versions(versionViews)
                 .build();
     }
 
     @Override
     public List<CapabilityDefinition> listAgentCallableCapabilities() {
-        return lambdaQuery()
-                .eq(CapabilityDefinition::getEnabled, 1)
-                .and(wrapper -> wrapper
-                        .eq(CapabilityDefinition::getPublishStatus, "PUBLISHED")
-                        // 兼容升级前没有 publish_status 值的历史数据。
-                        .or()
-                        .isNull(CapabilityDefinition::getPublishStatus)
-                ).orderByAsc(CapabilityDefinition::getDomain)
-                .orderByAsc(CapabilityDefinition::getCapabilityCode)
-                .list();
+        List<CapabilityDefinition> registries =
+                lambdaQuery()
+                        .eq(CapabilityDefinition::getEnabled, 1)
+                        .eq(CapabilityDefinition::getPublishStatus,
+                                "PUBLISHED")
+                        .isNotNull( CapabilityDefinition::getActiveVersionId)
+                        .orderByAsc(CapabilityDefinition::getDomain)
+                        .orderByAsc(CapabilityDefinition::getCapabilityCode)
+                        .list();
+        return registries.stream()
+                .map(runtimeSnapshotResolver::resolve)
+                .toList();
 
+    }
+    /**
+     * 保存草稿时要求核心字段完整。
+     *
+     * Schema 和绑定配置可以在草稿阶段继续完善，
+     * 但能力基本身份和目标接口必须明确。
+     */
+    private void checkSaveRequired(
+            CapabilitySaveDTO dto) {
+
+        if (dto == null) {
+            throw new BusinessException(
+                    400,
+                    "能力保存参数不能为空"
+            );
+        }
+
+        if (!StringUtils.hasText(dto.getCapabilityCode())) {
+            throw new BusinessException(
+                    400,
+                    "capabilityCode不能为空"
+            );
+        }
+
+        if (!StringUtils.hasText(dto.getCapabilityName())) {
+            throw new BusinessException(
+                    400,
+                    "capabilityName不能为空"
+            );
+        }
+
+        if (!StringUtils.hasText(dto.getDomain())) {
+            throw new BusinessException(
+                    400,
+                    "domain不能为空"
+            );
+        }
+
+        if (!StringUtils.hasText(dto.getMethod())) {
+            throw new BusinessException(
+                    400,
+                    "method不能为空"
+            );
+        }
+
+        if (!StringUtils.hasText(dto.getUrl())) {
+            throw new BusinessException(
+                    400,
+                    "url不能为空"
+            );
+        }
     }
 
     /**
@@ -327,6 +599,11 @@ public class CapabilityDefinitionServiceImpl extends ServiceImpl<CapabilityDefin
         validateSideEffect(capability);
         validateSchema(capability.getCapabilityCode(),"inputSchemaJson",capability.getInputSchemaJson());
         validateSchema(capability.getCapabilityCode(),"outputSchemaJson",capability.getOutputSchemaJson());
+        /*
+         * 发布时必须重新校验数据库中的请求和响应绑定，
+         * 不能只依赖保存阶段的校验结果。
+         */
+        bindingConfigurationService.validateForPublish(capability );
 
         // READ能力至少需要一个已经审核发布的返回字段。
         if ("READ".equalsIgnoreCase(capability.getSideEffect())) {
